src/sass/components/_header.scss
header {
  .top-bar {
    background-color: $header-topbar-bg;

    ul {
      list-style: none;
      margin: 0;
      padding: 0;

      li {
        display: inline-block;
        line-height: 55px;

        a {
          color: #ffffff;
          font-size: 13px;

          &:hover {
            color: $primary;
            text-decoration: none;
          }
        }
      }
    }

    .text-left ul li {
      margin-right: 1.5rem;

      i {
        margin-left: 5px;
      }
    }

    .text-right ul li {
      margin-left: 1.5rem;

      i {
        margin-right: 5px;
      }
    }
  }

  .company-claim {
    background-color: $header-bg;

    .container > .row {
      height: 145px;
    }
  }

  .phone-number {
    margin: 0;
    font-size: 17px;
    line-height: 42px;
    color: rgb(216, 216, 216);
    font-weight: 500;

    i {
      font-size: 32px;
      color: $primary;
      vertical-align: middle;
      margin-top: -3px;
      margin-right: 0.8rem;
    }
  }

  .cart {
    .cart-box {
      display: inline-block;
      position: relative;
      color: #ffffff;

      .cart-icon {
        background-color: $primary;
        width: 55px;
        height: 50px;
        border-radius: 3px;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 20px;

        i {
          margin-right: 5px;
        }
      }

      .cart-counter {
        width: 28px;
        height: 27px;
        border-radius: 14px;
        background-color: $header-bg;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 14px;
        color: rgb(224, 227, 237);
        position: absolute;
        top: 50%;
        right: 0;
        transform: translate(50%, -50%);
      }

      &:hover {
        .cart-icon {
          background-color: lighten($primary, 10%);
        }
      }
    }
  }

  .menu-bar {
    box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
    background-color: #ffffff;

    .container > .row {
      height: 84px;
    }

    .menu {
      display: flex;
      align-self: stretch;

      ul {
        margin: 0;
        padding: 0;
        display: flex;

        li {
          list-style: none;
          display: flex;
          align-items: stretch;

          a {
            color: $text-color;
            text-transform: uppercase;
            font-size: 12px;
            padding: 1rem;
            text-decoration: none;
            display: flex;
            align-items: center;
            border-top: 4px solid #ffffff;
            font-weight: 500;
            letter-spacing: 1px;

            &:hover,
            &.active {
              background-color: $primary;
              color: #ffffff;
              border-color: $primary;
            }

            &.active {
              border-color: $text-color;
            }
          }
        }
      }
    }

    .search-form {
      border: 1px solid $form-border-color;
      display: inline-flex;
      height: 45px;
      color: $text-color;

      .category {
        border-right: 1px solid $form-border-color;
        display: flex;
        align-items: center;
        position: relative;

        i:first-child {
          color: $primary;
          position: absolute;
          left: 10px;
          z-index: 0;
        }

        i:last-child {
          position: absolute;
          right: 10px;
          z-index: 0;
        }

        select {
          -webkit-appearance: none;
          border: 0;
          background-color: transparent;
          outline: none;
          padding: 5px 30px 5px 35px;
          font-size: 14px;
          position: relative;
          z-index: 1;
        }
      }

      .search-field {
        display: flex;
        align-items: center;
        position: relative;

        input {
          border: 0;
          padding-left: 10px;
          font-size: 14px;
          outline: none;

          &::placeholder {
            color: $text-color;
          }
        }

        button {
          border: 0;
          background-color: transparent;
          outline: none;
        }
      }
    }
  }
}

@media (max-width: 768px) {
  .company-claim {
    .row {
      position: relative;
    }

    .phone-number {
      font-size: 14px;
      text-align: right;

      &-wrapper {
        position: absolute;
        right: 15px;
        bottom: 10%;
        padding: 0;
      }
    }

    .cart {
      position: relative;
      top: -15px;
      right: 15px;
    }
  }
}

@media (max-width: 576px) {
  .text-right {
    li {
      width: 13px;
      overflow: hidden;
      white-space: nowrap;

      &:first-of-type {
        margin-left: 0;
      }
    }
  }
}

@media (max-width: 370px) {
  .company-claim .phone-number-wrapper {
    bottom: 0;
  }
}

